[gd_scene load_steps=4 format=3 uid="uid://dgguf4jnts01r"]

[ext_resource type="Script" uid="uid://eem0putghxav" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[sub_resource type="Gradient" id="Gradient_vue75"]
offsets = PackedFloat32Array(0, 0.64324325, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.34117648, 0.8156863, 0.8156863, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_l6cm7"]
gradient = SubResource("Gradient_vue75")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_l6cm7")

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control2"]
layout_mode = 0
offset_left = -336.0
offset_top = 209.0
offset_right = 20.0
offset_bottom = 941.0
color = Color(0.15557122, 0.4723683, 0.4727434, 1)

[node name="ColorRect2" type="ColorRect" parent="Control2"]
layout_mode = 0
offset_left = 555.0
offset_top = -115.0
offset_right = 1107.0
offset_bottom = 182.0
color = Color(0.9607843, 0.9529412, 0.9529412, 1)

[node name="ColorRect3" type="ColorRect" parent="Control2"]
layout_mode = 0
offset_left = -1309.0
offset_top = -907.0
offset_right = -421.0
offset_bottom = -167.0
color = Color(0.043137256, 0.13725491, 0.13725491, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -141.0
offset_right = 142.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 52
text = "Day of Fury"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsLabel" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -175.0
offset_right = 142.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 52
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -29.0
offset_right = 128.0
offset_bottom = 147.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="Control/MainMenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="HSeparator" type="HSeparator" parent="Control/MainMenuContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="CreditsButton" type="Button" parent="Control/MainMenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="HSeparator2" type="HSeparator" parent="Control/MainMenuContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="QuitButton" type="Button" parent="Control/MainMenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="CreditsContainer" type="VBoxContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -29.0
offset_right = 128.0
offset_bottom = 147.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/CreditsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Eu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Control/CreditsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Tu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Control/CreditsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Ele"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="Control/CreditsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Nos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="Control/CreditsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Vos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="Control/CreditsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Eles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Control/CreditsContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="Control/CreditsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[connection signal="item_rect_changed" from="." to="." method="_on_item_rect_changed"]
[connection signal="pressed" from="Control/MainMenuContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/MainMenuContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Control/MainMenuContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/CreditsContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
